API key removed due to privacy issues

--- a/OCR_API_method.ipynb
+++ b/OCR_API_method.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "result = requests.post(url_api,\n",
     "              files = {\"Downloads/book.jpg\": file_bytes},\n",
-    "              data = {\"apikey\": \"AIzaSyD6iM_Jdw84T_9hsCt-N_h1h_sD2D4MKSo\",\n",
+    "              data = {\"apikey\": \"API_key\",\n",
     "                      \"language\": \"eng\"})\n",
     "result = result.content.decode()\n",
     "result = json.loads(result)"
