added a valid api key

--- a/OCR_API_method.ipynb
+++ b/OCR_API_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,13 +11,13 @@
     "import cv2\n",
     "import numpy as np\n",
     "import requests\n",
-    "img = cv2.imread(\"Downloads/book.jpg\")\n",
+    "img = cv2.imread(\"book.jpg\")\n",
     "height, width, _ = img.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,13 +28,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "result = requests.post(url_api,\n",
     "              files = {\"Downloads/book.jpg\": file_bytes},\n",
-    "              data = {\"apikey\": \"API_key\",\n",
+    "              data = {\"apikey\": \"97111fe32288957\",\n",
     "                      \"language\": \"eng\"})\n",
     "result = result.content.decode()\n",
     "result = json.loads(result)"
@@ -42,14 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The API key is invalid\n"
+      "{'ParsedResults': [{'TextOverlay': {'Lines': [], 'HasOverlay': False, 'Message': 'Text overlay is not provided as it is not requested'}, 'TextOrientation': '0', 'FileParseExitCode': 1, 'ParsedText': 'FOREWORD\\r\\nT were well could one of the \" Men I have painted \"\\r\\ntake up the pen and contribute a character sketch of\\r\\nthe \" Man who has painted me \" for among all these\\r\\nliving and admirable studies, it is doubtful if there is\\r\\none individuality more unusual or more interesting than\\r\\nthat of the writer himself. To me, the lucky chance (if\\r\\nanything in this world is chance) that brought John McLure\\r\\nHamilton to my Hawarden home in the early \\'nineties was\\r\\ninvaluable, for it was the beginning of a deeply valued\\r\\nfriendship, of an intercourse rich in experience. Had I the\\r\\npen ofa De Morgan, let alone the tongue of men and angels,\\r\\na book might have been written on the five (in their different\\r\\nways) unique members of this family, a book which would\\r\\nhave surpassed even Joseph Vance or Alice for Short. May\\r\\nI hope to have the chance in another world.\\r\\nI can never forget the moment when Mr. Hamilton,\\r\\nafter a day or two spent anonymously in the Temple of\\r\\nPeace (Hawarden Castle), came into the library and asked\\r\\nI must first explain\\r\\nus to come and look at his picture.\\r\\nthat Mr. Gladstone had a habit of concentration, acquired\\r\\nby long years of self-discipline, that resulted in complete\\r\\nignorance of the presence of others, were they strangers or\\r\\nfriends, in his room. So long as they read or worked in\\r\\n7\\r\\n', 'ErrorMessage': '', 'ErrorDetails': ''}], 'OCRExitCode': 1, 'IsErroredOnProcessing': False, 'ProcessingTimeInMilliseconds': '33859', 'SearchablePDFURL': 'Searchable PDF not generated as it was not requested.'}\n"
      ]
     }
    ],
